tests/fixtures/semantic/invalid/duplicate-declaration.ck
module app.bad

model User {
  id: ID
}

model User {
  name: String
}
